--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "react-bootstrap",
+  "name": "react-bootstrap-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
   },
